--- a/app/views/boletim.html
+++ b/app/views/boletim.html
@@ -9,8 +9,8 @@
     </div>
 
     <div id="botao">
-        <div style="padding-top: 10px;" id="col-btn" class="col-12">
-            <a aria-pressed="true" class="btn btn-dark"
+        <div style="padding-top: 20px;" id="col-btn" class="col-12">
+            <a aria-pressed="true" class="btn btn-link"
                     href="http://localhost:8080/notas/report/{{idAlunos}}"
                     target="_blank"
                     role="button">Gerar Boletim</a>                       
