--- a/app/views/cadastro.html
+++ b/app/views/cadastro.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Cadastro</h1>
-    <p>Faça aqui o seu cadastro de alunos e disciplinas.</p>
+    <p>Faça aqui o cadastro de alunos e disciplinas.</p>
 
 </div>
 
@@ -11,7 +11,7 @@
     <button ng-click="salvar(nome, data)"type="text" footer class="text-center"> Salvar</button></footer>
     
     <pre><input ng-model="disciplinas" placeholder="Adicione a disciplina" type="text" footer class="text-center" size="25"></input></pre>
-    <button ng-click="ok(disciplinas)"type="text" footer class="text-center">Salvar</button>
+    <button ng-click="ok(disciplinas)" footer class="text-center">Salvar</button>
 
     </footer>
 
