--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,8 +1,7 @@
 <!-- home.html -->
 <div>
     <h1>Ambrosini School</h1>
-    <p>Bem-vindo ao nosso gerador de boletim!</p><br>
 
-    <pre>Cadastre seus alunos, disciplinas e notas na aba de cadastros.
-        </pre>
+<br>
+  <p><pre>Bem-vindo ao nosso gerador de boletim!</p></pre></br>
 </div>
