--- a/app/views/cadastro.html
+++ b/app/views/cadastro.html
@@ -7,7 +7,7 @@
 <body ng-app="app" ng-controller="CadastroCtrl">
 
     <pre><input ng-model="nome"  placeholder= "Preencha o nome do aluno" type="text" footer class="text-center"  size="40"><pre></input>
-    <pre><input ng-model="data" placeholder="Data de nascimento"type="text" footer class="text-center" size="20"></input></pre>
+    <pre><input ng-model="data" placeholder="Data de nascimento"type="date" footer class="text-center" size="20"></input></pre>
     <button ng-click="salvar(nome, data)"type="text" footer class="text-center"> Salvar</button></footer>
     
     <pre><input ng-model="disciplinas" placeholder="Adicione a disciplina" type="text" footer class="text-center" size="25"></input></pre>
